--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -214,35 +214,28 @@
       <div class="container project-detail">
 
         <div class="row lightbox-gallery">
-          <div class="col-lg-12">
+          <div class="col-lg-4">
             <h2 class="title">Animation</h2>
             <p>The most fun I had on this project came at the time of animating the illustrations I created for the
               brand. I also had the opportunity to attend the event itself. I have great memories of this job. I extened
               spaceial thanks to Maya Moore for the photos of the evet which were cortesy of brightestyoungthings.com
             </p>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!--======= 3 Images - Without Padding ======= -->
-    <div data-midnight="white" class="white-bg row lightbox-gallery">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-8 offset-sm-2">
+          <div class="col-lg-8">
             <div class="image bottom_120">
               <img class="round-corners" src="img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <!--======= 3 Images - Without Padding ======= -->
 
     </section>
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <section data-midnight="dark" class="purple">
+    <section data-midnight="dark" class="green">
       <!-- Images -->
       <div class="image lightbox-gallery bottom_30">
         <!-- a image -->
